Added in-place update.

--- a/examples/ex2.ipynb
+++ b/examples/ex2.ipynb
@@ -112,7 +112,7 @@
       "> Loaded generated Python code in \"/home/hacui/.andes/pycode\".\n",
       "Parsing input file \"/home/hacui/repos/andes/andes/cases/kundur/kundur_full.xlsx\"...\n",
       "Input file parsed in 0.0752 seconds.\n",
-      "System internal structure set up in 0.0176 seconds.\n",
+      "System internal structure set up in 0.0187 seconds.\n",
       "-> System connectivity check results:\n",
       "  No islanded bus detected.\n",
       "  System is interconnected.\n",
@@ -121,21 +121,21 @@
       "-> Power flow calculation\n",
       "   Sparse solver: KLU\n",
       " Solution method: NR method\n",
-      "Power flow initialized in 0.0018 seconds.\n",
+      "Power flow initialized in 0.0021 seconds.\n",
       "0: |F(x)| = 14.9282832\n",
       "1: |F(x)| = 3.608627841\n",
       "2: |F(x)| = 0.1701107882\n",
       "3: |F(x)| = 0.002038626956\n",
       "4: |F(x)| = 3.745103977e-07\n",
-      "Converged in 5 iterations in 0.0051 seconds.\n",
-      "Report saved to \"kundur_full_out.txt\" in 0.0008 seconds.\n"
+      "Converged in 5 iterations in 0.0053 seconds.\n",
+      "Report saved to \"kundur_full_out.txt\" in 0.0007 seconds.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-> Single process finished in 0.2118 seconds.\n"
+      "-> Single process finished in 0.2089 seconds.\n"
      ]
     }
    ],
@@ -175,7 +175,7 @@
       "Working directory: \"/home/hacui/repos/andes/examples\"\n",
       "> Reloaded generated Python code of module \"pycode\".\n",
       "Parsing input file \"/home/hacui/repos/andes/andes/cases/kundur/kundur_full.xlsx\"...\n",
-      "Input file parsed in 0.0275 seconds.\n"
+      "Input file parsed in 0.0283 seconds.\n"
      ]
     }
    ],
@@ -244,7 +244,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "System internal structure set up in 0.0340 seconds.\n",
+      "System internal structure set up in 0.0393 seconds.\n",
       "-> System connectivity check results:\n",
       "  No islanded bus detected.\n",
       "  System is interconnected.\n",
@@ -253,15 +253,15 @@
       "-> Power flow calculation\n",
       "   Sparse solver: KLU\n",
       " Solution method: NR method\n",
-      "Power flow initialized in 0.0023 seconds.\n",
+      "Power flow initialized in 0.0020 seconds.\n",
       "0: |F(x)| = 14.9282832\n",
       "1: |F(x)| = 3.579044433\n",
       "2: |F(x)| = 0.119268955\n",
       "3: |F(x)| = 0.03278820195\n",
       "4: |F(x)| = 2.880943096e-05\n",
       "5: |F(x)| = 3.93747257e-11\n",
-      "Converged in 6 iterations in 0.0053 seconds.\n",
-      "Report saved to \"kundur_full_out.txt\" in 0.0006 seconds.\n"
+      "Converged in 6 iterations in 0.0056 seconds.\n",
+      "Report saved to \"kundur_full_out.txt\" in 0.0007 seconds.\n"
      ]
     },
     {
@@ -359,10 +359,10 @@
       "Parsing input file \"/home/hacui/repos/andes/andes/cases/kundur/kundur.raw\"...\n",
       "  MODIFIED KUNDUR'S TWO-AREA TEST SYSTEM, DISTRIBUTED WITH ANDES\n",
       "  SEE THE BOOK \"POWER SYSTEM STABILITY AND CONTROL\" FOR ORIGINAL DATA\n",
-      "Input file parsed in 0.0023 seconds.\n",
+      "Input file parsed in 0.0024 seconds.\n",
       "Parsing additional file \"/home/hacui/repos/andes/andes/cases/kundur/kundur_full.dyr\"...\n",
-      "Addfile parsed in 0.0571 seconds.\n",
-      "System internal structure set up in 0.0264 seconds.\n",
+      "Addfile parsed in 0.0588 seconds.\n",
+      "System internal structure set up in 0.0272 seconds.\n",
       "-> System connectivity check results:\n",
       "  No islanded bus detected.\n",
       "  System is interconnected.\n",
@@ -371,18 +371,18 @@
       "-> Power flow calculation\n",
       "   Sparse solver: KLU\n",
       " Solution method: NR method\n",
-      "Power flow initialized in 0.0028 seconds.\n",
+      "Power flow initialized in 0.0018 seconds.\n",
       "0: |F(x)| = 3.175850023\n",
       "1: |F(x)| = 3.176155228e-08\n",
-      "Converged in 2 iterations in 0.0016 seconds.\n",
-      "Report saved to \"kundur_out.txt\" in 0.0004 seconds.\n"
+      "Converged in 2 iterations in 0.0018 seconds.\n",
+      "Report saved to \"kundur_out.txt\" in 0.0005 seconds.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-> Single process finished in 0.1379 seconds.\n"
+      "-> Single process finished in 0.1396 seconds.\n"
      ]
     }
    ],
@@ -1235,6 +1235,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### In-place update"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`alter()` can be used to change the value of `ConstService` to modify the\n",
+    "equation that depend on such `ConstService`. For example, the distributed PV\n",
+    "model `PVD1` implements a `ConstService` called `pref0` to store the initial\n",
+    "value of the power reference. An equation associated with variable `Pref`\n",
+    "enforces that `0 = Pref - pref0`.\n",
+    "\n",
+    "If one needs to modify `Pref`, it has to be done through modifying `pref0`.\n",
+    "Modifying `Pref` directly will not take any effect since the variable will be\n",
+    "overwritten by the solution of equations. \n",
+    "\n",
+    "To update `pref0` for a `PVD1` device with `idx = \"PVD_1\"`, one can do\n",
+    "\n",
+    "`ss.PVD1.alter('pref0', 'PVD_1', 0.005)`\n",
+    "\n",
+    "or, using keyword arguments in any order, \n",
+    "\n",
+    "`ss.PVD1.alter(src='pref0', idx='PVD_1', value=0.005)`\n",
+    "\n",
+    "If `PVD_1` is the first (i.e., 0-th in the Python indexing) in the idx list, this modification is equivalent to setting\n",
+    "\n",
+    "`ss.PVD1.pref0.v[0] = 0.005`.\n",
+    "\n",
+    "Since index `0` is given, the array `ss.PVD1.pref0.v` is updated in-place."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When one needs to modify the `pref0` of all `PVD1` devices to 0.005, one can do\n",
+    "\n",
+    "`ss.PVD1.alter('pref0', ss.PVD1.idx.v, 0.005)`\n",
+    "\n",
+    "This is equivalent to \n",
+    "\n",
+    "`ss.PVD1.pref0.v[:] = 0.005`\n",
+    "\n",
+    "Note the `[:]` in the above line. This is a slice operation so that the\n",
+    "assignment happens in-place.\n",
+    "\n",
+    "One must never do out-of-place assignment, i.e.,\n",
+    "\n",
+    "`ss.PVD1.pref0.v = 0.005` \n",
+    "\n",
+    "or \n",
+    "\n",
+    "`ss.PVD1.pref0.v = 0.005 * np.ones_line(ss.PVD1.pref0.v)`\n",
+    "\n",
+    "because the assignment will point `ss.PVD1.pref0.v` to a new array. Internally,\n",
+    "ANDES reuses the memory for all arrays, meaning that their addresses are assumed\n",
+    "to be constant. If one modifies `ss.PVD1.pref0.v` out of place, the previous\n",
+    "memory will no longer be accessible through `ss.PVD1.pref0.v`.\n",
+    "\n",
+    "On the safe side, one should modify variables using `alter()` or, at least,\n",
+    "always use in-place assignment to internal arrays."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Refreshing the view"
    ]
   },
@@ -2003,7 +2071,7 @@
       "Sparse Solver: KLU\n",
       "Simulation time: 0.0-20.0 s.\n",
       "Fixed step size: h=33.33 ms. Shrink if not converged.\n",
-      "Initialization for dynamics completed in 0.0181 seconds.\n",
+      "Initialization for dynamics completed in 0.0194 seconds.\n",
       "Initialization was successful.\n"
      ]
     },
@@ -2012,16 +2080,16 @@
      "output_type": "stream",
      "text": [
       "<Toggler Toggler_1>: Line.Line_8 status changed to 0 at t=2.0 sec.              \n",
-      "100%|#########################################| 100/100 [00:00<00:00, 175.70%/s]"
+      "100%|#########################################| 100/100 [00:00<00:00, 173.77%/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Simulation completed in 0.5696 seconds.\n",
+      "Simulation completed in 0.5758 seconds.\n",
       "Outputs to \"kundur_out.lst\" and \"kundur_out.npz\".\n",
-      "Outputs written in 0.0169 seconds.\n"
+      "Outputs written in 0.0168 seconds.\n"
      ]
     },
     {
@@ -2065,7 +2133,7 @@
     {
      "data": {
       "text/plain": [
-       "<andes.variables.dae.DAETimeSeries at 0x7f5e4bd92f10>"
+       "<andes.variables.dae.DAETimeSeries at 0x7f4878197df0>"
       ]
      },
      "execution_count": 24,
@@ -2247,7 +2315,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where the `:` in the first axis will access such data for all time stamps, the `a` field of `ss.GENROU.omega` stores the addresses into `ss.dae.x`."
+    "where the `:` in the first axis will access such data for all time stamps, and\n",
+    "`ss.GENROU.omega.a` stores the addresses  of all `omega` into `ss.dae.x`."
    ]
   },
   {
@@ -2352,8 +2421,8 @@
       "> Loaded config from file \"/home/hacui/.andes/andes.rc\"\n",
       "> Reloaded generated Python code of module \"pycode\".\n",
       "Parsing input file \"/home/hacui/repos/andes/andes/cases/ieee14/ieee14_fault.xlsx\"...\n",
-      "Input file parsed in 0.0343 seconds.\n",
-      "System internal structure set up in 0.0229 seconds.\n",
+      "Input file parsed in 0.0364 seconds.\n",
+      "System internal structure set up in 0.0243 seconds.\n",
       "-> System connectivity check results:\n",
       "  No islanded bus detected.\n",
       "  System is interconnected.\n",
@@ -2363,7 +2432,7 @@
       "   Sparse solver: UMFPACK\n",
       " Solution method: NR method\n",
       "Numba compilation initiated with caching.\n",
-      "Power flow initialized in 0.1460 seconds.\n",
+      "Power flow initialized in 0.1280 seconds.\n",
       "0: |F(x)| = 0.5605182134\n",
       "1: |F(x)| = 0.006202200332\n",
       "2: |F(x)| = 5.819382825e-06\n",
@@ -2376,7 +2445,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-> Single process finished in 0.3120 seconds.\n"
+      "-> Single process finished in 0.2926 seconds.\n"
      ]
     }
    ],
