--- a/examples/ex2.ipynb
+++ b/examples/ex2.ipynb
@@ -111,8 +111,8 @@
       "Working directory: \"/home/hacui/repos/andes/examples\"\n",
       "> Loaded generated Python code in \"/home/hacui/.andes/pycode\".\n",
       "Parsing input file \"/home/hacui/repos/andes/andes/cases/kundur/kundur_full.xlsx\"...\n",
-      "Input file parsed in 0.0752 seconds.\n",
-      "System internal structure set up in 0.0187 seconds.\n",
+      "Input file parsed in 0.0732 seconds.\n",
+      "System internal structure set up in 0.0199 seconds.\n",
       "-> System connectivity check results:\n",
       "  No islanded bus detected.\n",
       "  System is interconnected.\n",
@@ -121,13 +121,13 @@
       "-> Power flow calculation\n",
       "   Sparse solver: KLU\n",
       " Solution method: NR method\n",
-      "Power flow initialized in 0.0021 seconds.\n",
+      "Power flow initialized in 0.0027 seconds.\n",
       "0: |F(x)| = 14.9282832\n",
       "1: |F(x)| = 3.608627841\n",
       "2: |F(x)| = 0.1701107882\n",
       "3: |F(x)| = 0.002038626956\n",
       "4: |F(x)| = 3.745103977e-07\n",
-      "Converged in 5 iterations in 0.0053 seconds.\n",
+      "Converged in 5 iterations in 0.0046 seconds.\n",
       "Report saved to \"kundur_full_out.txt\" in 0.0007 seconds.\n"
      ]
     },
@@ -135,7 +135,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-> Single process finished in 0.2089 seconds.\n"
+      "-> Single process finished in 0.2108 seconds.\n"
      ]
     }
    ],
@@ -175,7 +175,7 @@
       "Working directory: \"/home/hacui/repos/andes/examples\"\n",
       "> Reloaded generated Python code of module \"pycode\".\n",
       "Parsing input file \"/home/hacui/repos/andes/andes/cases/kundur/kundur_full.xlsx\"...\n",
-      "Input file parsed in 0.0283 seconds.\n"
+      "Input file parsed in 0.0261 seconds.\n"
      ]
     }
    ],
@@ -244,7 +244,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "System internal structure set up in 0.0393 seconds.\n",
+      "System internal structure set up in 0.0383 seconds.\n",
       "-> System connectivity check results:\n",
       "  No islanded bus detected.\n",
       "  System is interconnected.\n",
@@ -253,15 +253,15 @@
       "-> Power flow calculation\n",
       "   Sparse solver: KLU\n",
       " Solution method: NR method\n",
-      "Power flow initialized in 0.0020 seconds.\n",
+      "Power flow initialized in 0.0019 seconds.\n",
       "0: |F(x)| = 14.9282832\n",
       "1: |F(x)| = 3.579044433\n",
       "2: |F(x)| = 0.119268955\n",
       "3: |F(x)| = 0.03278820195\n",
       "4: |F(x)| = 2.880943096e-05\n",
       "5: |F(x)| = 3.93747257e-11\n",
-      "Converged in 6 iterations in 0.0056 seconds.\n",
-      "Report saved to \"kundur_full_out.txt\" in 0.0007 seconds.\n"
+      "Converged in 6 iterations in 0.0054 seconds.\n",
+      "Report saved to \"kundur_full_out.txt\" in 0.0003 seconds.\n"
      ]
     },
     {
@@ -359,10 +359,10 @@
       "Parsing input file \"/home/hacui/repos/andes/andes/cases/kundur/kundur.raw\"...\n",
       "  MODIFIED KUNDUR'S TWO-AREA TEST SYSTEM, DISTRIBUTED WITH ANDES\n",
       "  SEE THE BOOK \"POWER SYSTEM STABILITY AND CONTROL\" FOR ORIGINAL DATA\n",
-      "Input file parsed in 0.0024 seconds.\n",
+      "Input file parsed in 0.0022 seconds.\n",
       "Parsing additional file \"/home/hacui/repos/andes/andes/cases/kundur/kundur_full.dyr\"...\n",
-      "Addfile parsed in 0.0588 seconds.\n",
-      "System internal structure set up in 0.0272 seconds.\n",
+      "Addfile parsed in 0.0580 seconds.\n",
+      "System internal structure set up in 0.0186 seconds.\n",
       "-> System connectivity check results:\n",
       "  No islanded bus detected.\n",
       "  System is interconnected.\n",
@@ -374,15 +374,15 @@
       "Power flow initialized in 0.0018 seconds.\n",
       "0: |F(x)| = 3.175850023\n",
       "1: |F(x)| = 3.176155228e-08\n",
-      "Converged in 2 iterations in 0.0018 seconds.\n",
-      "Report saved to \"kundur_out.txt\" in 0.0005 seconds.\n"
+      "Converged in 2 iterations in 0.0020 seconds.\n",
+      "Report saved to \"kundur_out.txt\" in 0.0003 seconds.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-> Single process finished in 0.1396 seconds.\n"
+      "-> Single process finished in 0.1284 seconds.\n"
      ]
     }
    ],
@@ -2071,7 +2071,7 @@
       "Sparse Solver: KLU\n",
       "Simulation time: 0.0-20.0 s.\n",
       "Fixed step size: h=33.33 ms. Shrink if not converged.\n",
-      "Initialization for dynamics completed in 0.0194 seconds.\n",
+      "Initialization for dynamics completed in 0.0180 seconds.\n",
       "Initialization was successful.\n"
      ]
     },
@@ -2080,16 +2080,16 @@
      "output_type": "stream",
      "text": [
       "<Toggler Toggler_1>: Line.Line_8 status changed to 0 at t=2.0 sec.              \n",
-      "100%|#########################################| 100/100 [00:00<00:00, 173.77%/s]"
+      "100%|#########################################| 100/100 [00:00<00:00, 172.98%/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Simulation completed in 0.5758 seconds.\n",
+      "Simulation completed in 0.5784 seconds.\n",
       "Outputs to \"kundur_out.lst\" and \"kundur_out.npz\".\n",
-      "Outputs written in 0.0168 seconds.\n"
+      "Outputs written in 0.0170 seconds.\n"
      ]
     },
     {
@@ -2133,7 +2133,7 @@
     {
      "data": {
       "text/plain": [
-       "<andes.variables.dae.DAETimeSeries at 0x7f4878197df0>"
+       "<andes.variables.dae.DAETimeSeries at 0x7f3d07cc0e50>"
       ]
      },
      "execution_count": 24,
@@ -2421,8 +2421,8 @@
       "> Loaded config from file \"/home/hacui/.andes/andes.rc\"\n",
       "> Reloaded generated Python code of module \"pycode\".\n",
       "Parsing input file \"/home/hacui/repos/andes/andes/cases/ieee14/ieee14_fault.xlsx\"...\n",
-      "Input file parsed in 0.0364 seconds.\n",
-      "System internal structure set up in 0.0243 seconds.\n",
+      "Input file parsed in 0.0344 seconds.\n",
+      "System internal structure set up in 0.0301 seconds.\n",
       "-> System connectivity check results:\n",
       "  No islanded bus detected.\n",
       "  System is interconnected.\n",
@@ -2432,20 +2432,20 @@
       "   Sparse solver: UMFPACK\n",
       " Solution method: NR method\n",
       "Numba compilation initiated with caching.\n",
-      "Power flow initialized in 0.1280 seconds.\n",
+      "Power flow initialized in 0.1322 seconds.\n",
       "0: |F(x)| = 0.5605182134\n",
       "1: |F(x)| = 0.006202200332\n",
       "2: |F(x)| = 5.819382825e-06\n",
       "3: |F(x)| = 6.957087684e-12\n",
-      "Converged in 4 iterations in 0.0037 seconds.\n",
-      "Report saved to \"ieee14_fault_out.txt\" in 0.0005 seconds.\n"
+      "Converged in 4 iterations in 0.0039 seconds.\n",
+      "Report saved to \"ieee14_fault_out.txt\" in 0.0006 seconds.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-> Single process finished in 0.2926 seconds.\n"
+      "-> Single process finished in 0.3048 seconds.\n"
      ]
     }
    ],
