--- a/examples/ex11.ipynb
+++ b/examples/ex11.ipynb
@@ -16,13 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import andes\n",
     "\n",
-    "from andes.io.pandapower import to_pandapower, make_link_table, runopp_map, add_gencost\n",
+    "from andes.interop.pandapower import to_pandapower, \\\n",
+    "    make_link_table, runopp_map, add_gencost\n",
     "\n",
     "andes.config_logger(20)\n",
     "\n",
@@ -56,6 +57,22 @@
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Working directory: \"/home/hacui/repos/andes/examples\"\n",
+      "> Loaded generated Python code in \"/home/hacui/.andes/pycode\".\n",
+      "Parsing input file \"/home/hacui/repos/andes/andes/cases/ieee14/ieee14_ieeet1.xlsx\"...\n",
+      "Input file parsed in 0.0377 seconds.\n",
+      "System internal structure set up in 0.0256 seconds.\n",
+      "Working directory: \"/home/hacui/repos/andes/examples\"\n",
+      "> Reloaded generated Python code of module \"pycode\".\n",
+      "Parsing input file \"/home/hacui/repos/andes/andes/cases/ieee14/ieee14_ieeet1.xlsx\"...\n",
+      "Input file parsed in 0.0915 seconds.\n",
+      "System internal structure set up in 0.0178 seconds.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -101,7 +118,29 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "-> System connectivity check results:\n",
+      "  No islanded bus detected.\n",
+      "  System is interconnected.\n",
+      "  Each island has a slack bus correctly defined and enabled.\n",
+      "\n",
+      "-> Power flow calculation\n",
+      "   Sparse solver: KLU\n",
+      " Solution method: NR method\n",
+      "Power flow initialized in 0.0023 seconds.\n",
+      "0: |F(x)| = 0.5605182134\n",
+      "1: |F(x)| = 0.006202200332\n",
+      "2: |F(x)| = 5.819382825e-06\n",
+      "3: |F(x)| = 6.967745825e-12\n",
+      "Converged in 4 iterations in 0.0036 seconds.\n",
+      "Power flow results are consistent. Conversion is successful.\n"
+     ]
+    }
+   ],
    "source": [
     "ssp = to_pandapower(ss0)"
    ]
@@ -201,6 +240,26 @@
    "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "-> System connectivity check results:\n",
+      "  No islanded bus detected.\n",
+      "  System is interconnected.\n",
+      "  Each island has a slack bus correctly defined and enabled.\n",
+      "\n",
+      "-> Power flow calculation\n",
+      "   Sparse solver: KLU\n",
+      " Solution method: NR method\n",
+      "Power flow initialized in 0.0027 seconds.\n",
+      "0: |F(x)| = 0.5605182134\n",
+      "1: |F(x)| = 0.006202200332\n",
+      "2: |F(x)| = 5.819382825e-06\n",
+      "3: |F(x)| = 6.967745825e-12\n",
+      "Converged in 4 iterations in 0.0040 seconds.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -378,19 +437,14 @@
        "</div>"
       ],
       "text/plain": [
-       "  name     p_mw   q_mvar  va_degree  vm_pu name     p_mw   q_mvar  va_degree  \\\n",
-       "0    2  40.0000  30.4361    -1.7641   1.03    2  40.0000  30.4361    -1.7641   \n",
-       "1    3  40.0000  12.5971    -3.5371   1.01    3  40.0000  12.5971    -3.5371   \n",
-       "2    4  30.0000  20.9866    -6.4527   1.03    4  30.0000  20.9866    -6.4527   \n",
-       "3    5  35.0000   7.3964    -1.5400   1.03    5  35.0000   7.3964    -1.5400   \n",
-       "4    1  81.4272 -21.6171     0.0000   1.03    1  81.4272 -21.6171     0.0000   \n",
+       "   name     p_mw   q_mvar  va_degree  ...     p_mw   q_mvar  va_degree  vm_pu\n",
+       "0     2  40.0000  30.4361    -1.7641  ...  40.0000  30.4361    -1.7641   1.03\n",
+       "1     3  40.0000  12.5971    -3.5371  ...  40.0000  12.5971    -3.5371   1.01\n",
+       "2     4  30.0000  20.9866    -6.4527  ...  30.0000  20.9866    -6.4527   1.03\n",
+       "3     5  35.0000   7.3964    -1.5400  ...  35.0000   7.3964    -1.5400   1.03\n",
+       "4     1  81.4272 -21.6171     0.0000  ...  81.4272 -21.6171     0.0000   1.03\n",
        "\n",
-       "   vm_pu  \n",
-       "0   1.03  \n",
-       "1   1.01  \n",
-       "2   1.03  \n",
-       "3   1.03  \n",
-       "4   1.03  "
+       "[5 rows x 10 columns]"
       ]
      },
      "execution_count": 8,
@@ -757,10 +811,37 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "-> Time Domain Simulation Summary:\n",
+      "Sparse Solver: KLU\n",
+      "Simulation time: 0.0-2 s.\n",
+      "Fixed step size: h=33.33 ms. Shrink if not converged.\n",
+      "Initialization for dynamics completed in 0.0266 seconds.\n",
+      "Initialization was successful.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 65%|##########################6              | 65/100 [00:00<00:00, 1562.24%/s]\n"
+      " 65%|##########################6              | 65/100 [00:00<00:00, 1408.10%/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Simulation completed in 0.0465 seconds.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     },
     {
@@ -966,7 +1047,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|########################################| 100.0/100 [00:01<00:00, 56.51%/s]\n"
+      "100%|########################################| 100.0/100 [00:01<00:00, 55.92%/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Simulation completed in 1.7887 seconds.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     },
     {
@@ -1044,7 +1139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
