Update headings and add example 11.

--- a/examples/ex11.ipynb
+++ b/examples/ex11.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ANDES interface with pandapower"
+    "# Interface with pandapower"
    ]
   },
   {
@@ -225,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Comapre Power Flow"
+    "## Comapre Power Flow Results"
    ]
   },
   {
@@ -676,7 +676,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dispatch based on ``ssp`` results"
+    "## Generator dispatch based on OPF from pandapower"
    ]
   },
   {
