Add link of Jinning

--- a/docs/source/examples/pandapower.ipynb
+++ b/docs/source/examples/pandapower.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This example (1) shows how to convert an ANDES system (`ssa`) to a pandapower network (`ssp`), (2) benchmarks the powerflow results, (3) shows how to alter `ssa` active power setpoints according to `ssp` results."
+    "This example (1) shows how to convert an ANDES system (`ssa`) to a pandapower network (`ssp`), (2) benchmarks the powerflow results, (3) shows how to alter `ssa` active power setpoints according to `ssp` results.\n",
+    "\n",
+    "This interface is mainly developed by [Jinning Wang](https://www.linkedin.com/in/jinning-wang-846490199/)."
    ]
   },
   {
@@ -61,16 +63,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Working directory: \"/Users/jinningwang/Documents/work/andes/examples\"\n",
+      "Working directory: \"/Users/jinningwang/Documents/work/andes/docs/source/examples\"\n",
       "> Loaded generated Python code in \"/Users/jinningwang/.andes/pycode\".\n",
       "Parsing input file \"/Users/jinningwang/Documents/work/andes/andes/cases/ieee14/ieee14_ieeet1.xlsx\"...\n",
-      "Input file parsed in 0.1777 seconds.\n",
-      "System internal structure set up in 0.0352 seconds.\n",
-      "Working directory: \"/Users/jinningwang/Documents/work/andes/examples\"\n",
+      "Input file parsed in 0.2310 seconds.\n",
+      "System internal structure set up in 0.0481 seconds.\n",
+      "Working directory: \"/Users/jinningwang/Documents/work/andes/docs/source/examples\"\n",
       "> Reloaded generated Python code of module \"pycode\".\n",
       "Parsing input file \"/Users/jinningwang/Documents/work/andes/andes/cases/ieee14/ieee14_ieeet1.xlsx\"...\n",
-      "Input file parsed in 0.0663 seconds.\n",
-      "System internal structure set up in 0.0337 seconds.\n"
+      "Input file parsed in 0.0895 seconds.\n",
+      "System internal structure set up in 0.0383 seconds.\n"
      ]
     },
     {
@@ -131,12 +133,12 @@
       "-> Power flow calculation\n",
       "   Sparse solver: KLU\n",
       " Solution method: NR method\n",
-      "Power flow initialized in 0.0036 seconds.\n",
+      "Power flow initialized in 0.0031 seconds.\n",
       "0: |F(x)| = 0.5605182134\n",
       "1: |F(x)| = 0.006202200332\n",
       "2: |F(x)| = 5.819382825e-06\n",
       "3: |F(x)| = 6.967745825e-12\n",
-      "Converged in 4 iterations in 0.0051 seconds.\n",
+      "Converged in 4 iterations in 0.0071 seconds.\n",
       "Power flow results are consistent. Conversion is successful.\n"
      ]
     }
@@ -252,12 +254,12 @@
       "-> Power flow calculation\n",
       "   Sparse solver: KLU\n",
       " Solution method: NR method\n",
-      "Power flow initialized in 0.0036 seconds.\n",
+      "Power flow initialized in 0.0037 seconds.\n",
       "0: |F(x)| = 0.5605182134\n",
       "1: |F(x)| = 0.006202200332\n",
       "2: |F(x)| = 5.819382825e-06\n",
       "3: |F(x)| = 6.967745825e-12\n",
-      "Converged in 4 iterations in 0.0078 seconds.\n"
+      "Converged in 4 iterations in 0.0071 seconds.\n"
      ]
     },
     {
@@ -830,14 +832,14 @@
       "Sparse Solver: KLU\n",
       "Simulation time: 0.0-2 s.\n",
       "Fixed step size: h=33.33 ms. Shrink if not converged.\n",
-      "Initialization for dynamics completed in 0.0427 seconds.\n",
+      "Initialization for dynamics completed in 0.0435 seconds.\n",
       "Initialization was successful.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f6cc6e224d04b8d8d64061673451877",
+       "model_id": "23a6233b6079469db993d06825b9e085",
        "version_major": 2,
        "version_minor": 0
       },
@@ -852,7 +854,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Simulation completed in 0.0706 seconds.\n"
+      "Simulation completed in 0.0734 seconds.\n"
      ]
     },
     {
@@ -1076,7 +1078,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73b0ca740dd64f828feed8e95d854e2d",
+       "model_id": "b35d11c0cb8f466f8c888a83869ef149",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1091,7 +1093,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Simulation completed in 2.4258 seconds.\n"
+      "Simulation completed in 2.6138 seconds.\n"
      ]
     },
     {
