--- a/docs/source/examples/matpower.ipynb
+++ b/docs/source/examples/matpower.ipynb
@@ -13,7 +13,7 @@
    "id": "7b261dd8",
    "metadata": {},
    "source": [
-    "See also the API documentation :py:module:`andes.interop.matpower`."
+    "See also the API reference for `andes.interop.matpower`."
    ]
   },
   {
