--- a/docs/source/examples/matpower.ipynb
+++ b/docs/source/examples/matpower.ipynb
@@ -191,6 +191,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "094c359c",
+   "metadata": {},
+   "source": [
+    "One can also save the case to a MATPOWER `.m` file from Octave/MATLAB. Comment\n",
+    "in and run the following code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8e462b03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# m.eval(\"savecase('case14_andes.m', mpc)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "30fed4d4",
    "metadata": {},
    "source": [
@@ -199,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2c04649f",
    "metadata": {},
    "outputs": [],
@@ -235,17 +254,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "595ba30a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<andes.system.System at 0x7fe0387492e0>"
+       "<andes.system.System at 0x7f8684043520>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,14 +277,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "73f07f47",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1fa9e110db004d6f98d6e4e06d07b535",
+       "model_id": "6ab20b9ff74e4992b8387957a2d1ce0f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -290,7 +309,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "585749f0",
    "metadata": {},
    "outputs": [
@@ -327,7 +346,7 @@
        "(<Figure size 600x400 with 1 Axes>, <AxesSubplot:xlabel='Time [s]'>)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,14 +365,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "baea445a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2be3c2393b034237b5c138e3fce72361",
+       "model_id": "e9bd8a3fe6be4c96a4eb95d52532743e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -370,18 +389,19 @@
      "text": [
       "<Fault 1>: Applying fault on Bus (idx=9) at t=1.0 sec.\n",
       "<Fault 1>: Clearing fault on Bus (idx=9) at t=1.1 sec.\n",
-      "-> Single process finished in 0.6562 seconds.\n"
+      "-> Single process finished in 0.7220 seconds.\n"
      ]
     }
    ],
    "source": [
     "ss = andes.run(andes.get_case(\"ieee14/ieee14_fault.xlsx\"), \n",
-    "               routine='tds', verbose=30)"
+    "               routine='tds', verbose=30,\n",
+    "               no_output=True, default_config=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "1b1c11b4",
    "metadata": {},
    "outputs": [
@@ -403,7 +423,7 @@
        "(<Figure size 600x400 with 1 Axes>, <AxesSubplot:xlabel='Time [s]'>)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
